filestore-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: vue-file-store
  name: vue-file-store
  namespace: vue-file-store
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vue-file-store
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: vue-file-store
    spec:
      containers:
      - args: ["/sh/init_openresty.sh"]
        image: xjyplayer/simple_filestore_nginx:1.0.1
        imagePullPolicy: IfNotPresent
        name: file-store-nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /apps/vue_file_store_pro
          subPath: vue_file_store_pro
          name: vue-file-store-pvc
        - mountPath: /apps/logs
          subPath: logs
          name: vue-file-store-pvc
        - mountPath: /apps/simple_file_store_nginx
          subPath: simple_file_store_nginx
          name: vue-file-store-pvc
        - mountPath: /usr/local/openresty/nginx/conf/nginx_template.conf
          subPath: conf/nginx/nginx.conf
          name: nginx-conf
        workingDir: /apps/simple_file_store_nginx
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: vue-file-store-pvc
        persistentVolumeClaim:
          claimName: app-pvc-claim
      - name: nginx-conf
        configMap:
          name: vue-file-store-nginx-config-map
          items:
          - key: nginx.conf
            path: conf/nginx/nginx.conf
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: vue-file-store
  name: vue-file-store
  namespace: vue-file-store
spec:
  ports:
  - name: vue-file-store-server-main-port
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: vue-file-store
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name:  vue-file-store-gw
  namespace: vue-file-store
  labels:
    app: vue-file-store
    io.kompose.service: vue-file-store
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - vue-file-store.k8s.show
      tls:
        mode: SIMPLE
        credentialName: vue-file-store-imroc-io-tls
      port:
        number: 443
        name: vue-file-store-dashboard-https
        protocol: HTTPS
    - hosts:
        - vue-file-store.k8s.show
      port:
        number: 80
        name: vue-file-store-dashboard-http
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vue-file-store-dr
  namespace: vue-file-store
spec:
  host: vue-file-store.vue-file-store.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vue-file-store-vs
  namespace: vue-file-store
spec:
  hosts:
    - vue-file-store.k8s.show
  gateways:
    - vue-file-store-gw
  http:
    - match: null
      route:
        - destination:
            host: vue-file-store.vue-file-store.svc.cluster.local
            port:
              number: 80
